--- a/registerdialog.ui
+++ b/registerdialog.ui
@@ -326,7 +326,7 @@
             </spacer>
            </item>
            <item>
-            <widget class="QPushButton" name="varify_Btn">
+            <widget class="QPushButton" name="sure_Btn">
              <property name="minimumSize">
               <size>
                <width>100</width>
