--- a/style/stylesheet.qss
+++ b/style/stylesheet.qss
@@ -9,3 +9,28 @@ background-color:rgb(255,255,255)
 #error_tip_label[state = 'error'] {
     color:red;
 }
+
+#passVisible_label[state='unvisible']{
+   border-image: url(:/res/unvisible.png);
+}
+#passVisible_label[state='unvisible_hover']{
+   border-image: url(:/res/unvisible_hover.png);
+}
+#passVisible_label[state='visible']{
+   border-image: url(:/res/visible.png);
+}
+#passVisible_label[state='visible_hover']{
+   border-image: url(:/res/visible_hover.png);
+}
+#checkVisible_label[state='unvisible']{
+   border-image: url(:/res/unvisible.png);
+}
+#checkVisible_label[state='unvisible_hover']{
+   border-image: url(:/res/unvisible_hover.png);
+}
+#checkVisible_label[state='visible']{
+   border-image: url(:/res/visible.png);
+}
+#checkVisible_label[state='visible_hover']{
+   border-image: url(:/res/visible_hover.png);
+}
