--- a/style/stylesheet.qss
+++ b/style/stylesheet.qss
@@ -34,3 +34,15 @@ background-color:rgb(255,255,255)
 #checkVisible_label[state='visible_hover']{
    border-image: url(:/res/visible_hover.png);
 }
+
+#tip_lib, #tip2_lib{
+    color:green;
+}
+
+#forget_label[state='normal'],#forget_label[state='selected']{
+    color:black;
+}
+
+#forget_label[state='hover'], #forget_label[state='selected_hover']{
+    color: rgb(42, 112, 241);
+}
